--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,12 +111,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:lineSpacingExtra="3dp"
-        android:text="Tip:当前页面不要退出保持亮屏状态才能正常跳转\n点击启动后屏幕亮度会自动设置到最低"
+        android:text="Tip:\n1.当前页面不要退出保持在前台才能正常跳转\n2.当前页面可以锁屏，但是如果手机有锁屏密码需要取消锁屏密码才能正常跳转\n3.点击启动后屏幕亮度会自动设置到最低
+        \n4.原生系统和部分手机支持后台锁屏后自动跳转，需要自己测试手机是否支持"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
